# CryptBridge

./: README.md  pubspec.yaml
.github/agents/: gemini-helper.agent.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  cryptbridge.cpp  ffconf.h  vaultexplorer.cpp
lib/: main.dart  theme.dart
lib/models/: clipboard_item.dart  file_operation.dart  mounted_container.dart  thumbnail_cache_mode.dart
lib/screens/browser/: browser_dialogs.dart  file_browser_screen.dart  media_viewer_screen.dart
lib/screens/browser/mixins/: selection_mixin.dart  sort_mixin.dart
lib/screens/browser/viewer/: media_viewer_constants.dart  media_viewer_screen.dart  playlist_controller.dart  text_editor_screen.dart  video_playback_manager.dart
lib/screens/browser/widgets/: breadcrumb_bar.dart  clipboard_banner.dart  (+10 more)
lib/screens/dashboard/: vault_dashboard.dart
lib/screens/lock/: lock_gate_screen.dart  pattern_lock_view.dart  pattern_setup_sheet.dart
lib/screens/settings/: app_settings_screen.dart
lib/screens/unlock/: unlock_sheet.dart
lib/services/: app_cache_encryption.dart  app_settings_service.dart  channel_methods.dart  container_repository.dart  cross_container_clipboard.dart  cryptbridge_api.dart  file_operation_service.dart  local_streaming_server.dart  password_hasher.dart  saved_containers.dart  thumbnail_cache_service.dart  vaultexplorer_api.dart
lib/utils/: file_type_utils.dart  format_utils.dart  lru_cache.dart  raw_entry.dart  validation_utils.dart
test/: file_operation_service_test.dart
(+17 files in other folders)
